[mypy]
plugins = [
  "numpy.typing.mypy_plugin",
  "pandera.mypy",
  "pydantic.mypy"
]
explicit_package_bases = true
#namespace_packages = false

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = "double"

[project]
dependencies = [
  "aiometer",
  "asyncstdlib",
  "cvxpy",
  "dash[celery]",
  "dash-ag-grid",
  "dash-resizable-panels",
  "dash-tvlwc",
  "dashvis",
  "flask-caching",
  "fathon",
  "geopandas",
  "glom",
  "hishel",
  "httpx",
  "img2table",
  "lxml",
  "numba",
  "numpy",
  "openturns",
  "ordered-set",
  "orjson",
  "pandas",
  "parsel",
  "pycountry",
  "pydantic",
  "python-dotenv",
  "rapidfuzz",
  "requests",
  "scikit-learn",
  "scipy",
  "skfolio",
  "sqlalchemy",
  "statsmodels",
  "tabula-py[jpype]",
  "tqdm",
  "wbgapi"
]

[project.optional-dependencies]
dev = [
  "bandit",
  "datamodel-code-generator",
  "icecream",
  "ipykernel",
  "mypy",
  "pipreqs",
  "ruff",
  "uv"
]