[project]
name = "py-dash-quantapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiometer",
  #"asynciolimiter",
  "asyncstdlib",
  "cvxpy",
  "dash[celery,diskcache]",
  "dash-ag-grid",
  "dash-resizable-panels",
  "dash-tvlwc",
  "dashvis",
  "diskcache",
  "duckdb",
  "flask-caching",
  "geopandas",
  "glom",
  "hishel",
  "httpx",
  "img2table",
  "lxml",
  "minify-html",
  "numba",
  "numpy",
  "openturns",
  "ordered-set",
  "orjson",
  "pandas",
  "pandera",
  "parsel",
  "pdfplumber",
  "pycountry",
  "pydantic",
  "python-dotenv",
  "rapidfuzz",
  "requests",
  "rnet",
  "scikit-learn",
  "scipy",
  "skfolio",
  "sqlalchemy",
  "statsmodels",
  "tqdm",
  "wbgapi",
]

[project.optional-dependencies]
dev = [
  "bandit",
  "datamodel-code-generator",
  "icecream",
  "ipykernel",
  "mypy",
  "pipreqs",
  "ruff",
  "uv"
]

[mypy]
plugins = [
  "numpy.typing.mypy_plugin",
  "pandera.mypy",
  "pydantic.mypy"
]
explicit_package_bases = true
#namespace_packages = false

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = "double"
