[project]
name = "py-dash-quantapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiometer==0.5.0",
  "asyncstdlib==3.13.1",
  "cvxpy==1.7.0",
  "dash[celery,diskcache]==3.1.1",
  "dash-ag-grid==31.3.1",
  "dash-resizable-panels==0.1.0",
  #"dash-tvlwc==0.1.1",
  "dashvis==0.1.14",
  "diskcache==5.6.3",
  #"duckdb==1.3.2",
  "flask-caching==2.3.1",
  "glom==24.11.0",
  "hishel==0.1.3",
  "httpx==0.28.1",
  "img2table==1.4.1",
  "lxml==6.0.0",
  "minify-html==0.16.4",
  "numba==0.61.2",
  "numpy>=1.24,<2.3",
  "openturns==1.25",
  "ordered-set==4.1.0",
  "orjson==3.11.0",
  "pandas==2.3.1",
  "pandera[pandas]==0.25.0",
  "parsel==1.10.0",
  "polars==1.31.0",
  "pdfplumber==0.11.7",
  "pycountry==24.6.1",
  "pydantic==2.11.7",
  "python-dotenv==1.1.1",
  "rapidfuzz==3.13.0",
  "requests==2.32.4",
  "rnet==2.3.9",
  "scikit-learn==1.7.1",
  "scipy==1.16.0",
  "selectolax==0.3.32",
  "skfolio==0.10.1",
  "sqlalchemy==2.0.41",
  "statsmodels==0.14.5",
  "tenacity==9.1.2",
  "tqdm==4.67.1",
  "wbgapi==1.0.12",
]

[project.optional-dependencies]
dev = [
  "bandit",
  "datamodel-code-generator",
  "icecream",
  "ipykernel",
  "mypy",
  "pipreqs",
  "ruff",
  "uv"
]

[tool.mypy]
plugins = [
  "numpy.typing.mypy_plugin",
  "pandera.mypy",
  "pydantic.mypy"
]
explicit_package_bases = true
disable_error_code = ["import-untyped"]
#namespace_packages = false

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = "double"
